apps/base/authelia/middleware.yaml
# Traefik ForwardAuth Middleware for Authelia
# Use this middleware on IngressRoutes to require authentication
# Reference: https://www.authelia.com/integration/proxies/traefik/
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authelia-forwardauth
  namespace: app-authelia
spec:
  forwardAuth:
    address: http://authelia.app-authelia.svc.cluster.local:9091/api/authz/forward-auth
    trustForwardHeader: true
    authResponseHeaders:
      - Remote-User
      - Remote-Groups
      - Remote-Email
      - Remote-Name
