apps/base/authelia/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authelia
  namespace: app-authelia
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.cluster.arpa`)
      kind: Rule
      middlewares:
        - name: authelia-themepark
          namespace: app-authelia
      services:
        - name: authelia
          port: 9091
  tls:
    secretName: authelia-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authelia-public-com
  namespace: app-authelia
spec:
  entryPoints:
    - tunnel
  routes:
    - match: Host(`auth.decentm.com`)
      kind: Rule
      services:
        - name: authelia
          port: 9091
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authelia-public-ee
  namespace: app-authelia
spec:
  entryPoints:
    - tunnel
  routes:
    - match: Host(`auth.borooka.ee`)
      kind: Rule
      services:
        - name: authelia
          port: 9091
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authelia-themepark
  namespace: app-authelia
  labels:
    themepark.dev/managed: "true"
spec:
  plugin:
    themepark:
      app: authelia
      theme: overseerr
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: lldap-themepark
  namespace: app-authelia
  labels:
    themepark.dev/managed: "true"
spec:
    plugin:
      themepark:
        app: lldap
        theme: overseerr
