apps/base/authelia/ingressroute.yaml
# Authelia IngressRoute for cluster.arpa domain
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authelia
  namespace: app-authelia
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.cluster.arpa`)
      kind: Rule
      services:
        - name: authelia
          port: 9091
  tls:
    secretName: authelia-tls
